<resources>
    <string name="app_name">Trip</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="check1">Remember me</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="Upcoming_trips">Upcoming \n trips</string>
    <string name="round_trip">"Round Trip "</string>
    <string name="Trip_Name">Trip Name</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="Start_Point">Start Point</string>
    <string name="end_point">End_Point</string>
    <string name="start_datails">Start Details</string>
    <string name="upComing">upcoming</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string name="addnotes">Add Your Notes</string>
    <string name="add">+</string>
    <string name="add2">+ Add Notes</string>
    <string name="welcome">Trip to \n freedom !</string>
    <string name="Add3">Add Trip</string>
    <string name="name2">User Name</string>

    <string name="facebook_app_id">399829851521929</string>
    <string name="fb_login_protocol_scheme">fb399829851521929</string>
    <string name="Notes">Notes :</string>
    <string name="DeleteTrip">Delete Trip</string>
    <string name="to">To</string>
    <string name="from">From</string>

</resources>